# aegis

./: .dockerignore  .env.example  .env.test  .gitignore  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  LICENSE  MAINTAINERS.md  Makefile  NOTICE.md  README.md  SECURITY.md  docker-compose.yml  package-lock.json  package.json  pyproject.toml  tsconfig.base.json  vercel.json
.claude/: launch.json
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: feature_request.md
.github/workflows/: ci.yml
apps/web/: next.config.mjs  package.json
apps/web/app/: globals.css  layout.tsx  page.tsx
apps/web/components/: AgentsSection.tsx  CopyCA.tsx  FirewallDemo.tsx  Icons.tsx  Logo.tsx  ScannerDemo.tsx  StatsBoard.tsx
apps/web/lib/: live.ts
contracts/: README.md
contracts/src/: AegisRegistry.sol
docs/: checks.md  deployment.md  faq.md  glossary.md  robinhood-chain.md
examples/: ci_integration.sh  config_example.py  sample_output.md  scan_example.py  webhook_integration.py
site/: README.md  index.html
skill/: README.md  build.sh
skill/aegis-scan/: SKILL.md  reference.md
src/hoodtrade/: __init__.py  ai.py  cli.py  config.py  constants.py  engine.py  export.py  mcp_server.py  models.py  networks.py  rpc.py  utils.py  validators.py
src/kabuto/: __init__.py  ai.py  cli.py  config.py  engine.py
tests/: conftest.py  test_checks.py  test_cli.py  test_dexscreener.py  test_engine.py  test_goplus.py  test_honeypot.py  test_integration.py  test_market.py  test_reputation.py  test_rpc.py  test_scoring.py  test_summary.py  test_types.py
(+18 files in other folders)
